--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Its Bus Driver</string>
+    <string name="app_name">ITS Bus Driver</string>
     <string name="title_activity_maps">Map</string>
 
     <string name="btn_on">ON</string>
@@ -13,4 +13,5 @@
     <string name="track_opt">Location track</string>
     <string name="btn_logout">Logout</string>
 
+    <string name="tv_username">Hello, </string>
 </resources>
